tests/ui/compile-fail/pinned_drop/unexpected_additional_item.stderr
error[E0438]: const `BAZ` is not a member of trait `pin_init::PinnedDrop`
  --> tests/ui/compile-fail/pinned_drop/unexpected_additional_item.rs:10:5
   |
10 |     const BAZ: usize = 0;
   |     ^^^^^^^^^^^^^^^^^^^^^ not a member of trait `pin_init::PinnedDrop`

error[E0412]: cannot find type `Pin` in this scope
 --> tests/ui/compile-fail/pinned_drop/unexpected_additional_item.rs:8:19
  |
8 |     fn drop(self: Pin<&mut Self>) {}
  |                   ^^^ not found in this scope
  |
help: consider importing this struct
  |
1 + use std::pin::Pin;
  |
